--- a/Web-Interface/AI/EnviromentVariables.env
+++ b/Web-Interface/AI/EnviromentVariables.env
@@ -1,8 +1,7 @@
-MODEL_TYPE: supports LlamaCpp or GPT4All
-PERSIST_DIRECTORY: is the folder you want your vectorstore in
-MODEL_PATH: Path to your GPT4All or LlamaCpp supported LLM
-MODEL_N_CTX: Maximum token limit for the LLM model
-EMBEDDINGS_MODEL_NAME: SentenceTransformers embeddings model name (see https://www.sbert.net/docs/pretrained_models.html)
-TARGET_SOURCE_CHUNKS: The amount of chunks (sources) that will be used to answer a question
+MODEL_TYPE= GPT4All
+PERSIST_DIRECTORY=db
+MODEL_PATH = /path/to/model
+EMBEDDINGS_MODEL_NAME=all-MiniLM-L6-v2
+MODEL_N_CTX=2048
+TARGET_SOURCE_CHUNKS=4
 N_GPU_LAYERS: The amount of layers that will be offloaded to the GPU. ONLY for LlamaCpp
-```
